# logik

./: .gitignore  CMakeLists.txt  Logik.cpp  Logik.h  Main.cpp  Readme.md  SequenceParser.cpp  SequenceParser.h
test/: Test.cpp
